--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "URL Collector",
+  "name": "URL Collector and sharer",
   "version": "1.3",
   "description": "Collect, manage, and share URLs from your browsing sessions.",
   "permissions": [
