--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
   "manifest_version": 3,
   "name": "URL Collector and sharer",
-  "version": "1.3",
-  "description": "Collect, manage, and share URLs from your browsing sessions.",
+  "version": "1.3.1",
+  "description": "Collect & share links instantly. Auto-capture URLs, export to JSON/CSV/TXT, bulk open tabs. For research & productivity.",
   "permissions": [
     "storage",
     "tabs",
     "scripting",
     "activeTab",
     "clipboardWrite",
-    "downloads",
     "favicon"
   ],
   "host_permissions": [
